@@ -23,7 +23,10 @@ dependencies {
   // optional: if we want to use the clustered management layer
   compileOnly project(':clustered:client')
   compileOnly "org.terracotta:entity-client-api:$terracottaApisVersion"
-  compileOnly "org.terracotta.management.dist:mnm-nms-agent:$terracottaPlatformVersion"
+  compileOnly ("org.terracotta.management.dist:mnm-nms-agent:$terracottaPlatformVersion") {
+    // This is to avoid stats lib being directly used.
+    exclude group:'org.terracotta', module:'statistics'
+  }
 
   compileOnly project(':api')
   compileOnly project(':core')
@@ -32,11 +35,6 @@ dependencies {
   testImplementation project(':xml')
   testImplementation project(':impl')
   testImplementation "com.fasterxml.jackson.core:jackson-databind:$jacksonVersion"
-  testCompile project(path: ':xml', configuration: 'testArchives')
-}
-
-test {
-  if (testJava.javaVersion.isJava9Compatible()) {
-    jvmArgs += ['--add-modules', 'java.xml.bind']
-  }
+  testImplementation 'org.xmlunit:xmlunit-core:2.6.0'
+  testImplementation 'org.xmlunit:xmlunit-matchers:2.6.0'
 }
